# inr_pinn_ocean

./: .gitignore  README.md  main.py  pyproject.toml
configs/: credentials.env.example  data_config_patch_34S69E.yaml  pinn_patch_34S69E.yaml
data/: download_glorys.py
scripts/: experiment1.py  experiment2.py  experiment2b.py  experiment3.py  experiment4.py  infer.py  run_experiment3.sh  run_experiment4_eos.sh  run_experiment4_sparsity.sh  run_sparsity_exp2b.sh
src/inrpinn/: __init__.py
src/inrpinn/data/: __init__.py  dataset.py  splitter.py
src/inrpinn/experiments/: __init__.py  plotting.py  runner.py
src/inrpinn/models/: inr.py  pinn.py  siren.py
src/inrpinn/physics/: brunt_vaisala.py  continuity.py  diagnostics.py  eos.py  ertel_pv.py  geostrophic.py  hydrostatic.py  mixed_layer.py  qgpv.py  residuals.py  salinity_adv.py  temp_adv.py  thermal_wind.py
src/inrpinn/utils/: coordinates.py  coriolis.py  io.py
