[project]
name = "inr-pinn-ocean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "datetime>=6.0",
    "matplotlib>=3.11.0",
    "mlflow>=1.27.0",
    "pandas>=3.0.3",
    "pathlib>=1.0.1",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "typing>=3.10.0.0",
    "xarray>=2026.4.0",
    "zarr>=3.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inrpinn"]

[tool.ruff]
line-length = 100
